<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="weather.titans.p92rdi.com.weathertitan.MainWeather">

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/menu_load_slot1"
        android:title="@string/slot1_load_title"
        android:onClick="loadCityWeather"
        />
    <item
        android:id="@+id/menu_save_slot1"
        android:title="@string/slot1_save_title"
        android:onClick="saveCityWeather"
        />
    <item
        android:id="@+id/menu_load_slot2"
        android:title="@string/slot2_load_title"
        android:onClick="loadCityWeather"

        />
    <item
        android:id="@+id/menu_save_slot2"
        android:title="@string/slot2_save_title"
        android:onClick="saveCityWeather"

        />
    <item
        android:id="@+id/menu_load_slot3"
        android:title="@string/slot3_load_title"
        android:onClick="loadCityWeather"

        />
    <item
        android:id="@+id/menu_save_slot3"
        android:title="@string/slot3_save_title"
        android:onClick="saveCityWeather"
        />
</menu>