<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/backGroundColor"
    tools:context="weather.titans.p92rdi.com.weathertitan.MainWeather"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< .merge_file_a05276
=======
>>>>>>> origin/petra_branch
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/cityTextView"
            style="@style/mainTextViewTheme"
            android:textSize="@dimen/text_view_size"
            android:text="Budapest"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:weightSum="1">
            <ImageView
                android:id="@+id/weatherImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="@dimen/activity_horizontal_margin"
                android:maxHeight="@dimen/activity_horizontal_margin"
                android:background="@color/colorPrimaryDark"/>
            <TextView
                android:id="@+id/degreeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingStart="10dp"
                android:textSize="@dimen/temp_text_view_size"
                android:text="25°"/>
        </LinearLayout>

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            android:textSize="@dimen/descr_text_view_size"
            android:text="windy"/>

    <ScrollView>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                style="@style/fixedTextViewTheme"
                android:text="@string/min"/>
            <TextView
                android:id="@+id/minDegTextView"
                style="@style/dataTextViewTheme"
                android:text="tudzts"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                style="@style/fixedTextViewTheme"
                android:text="@string/max"/>
            <TextView
                android:id="@+id/maxDegTextView"
                style="@style/dataTextViewTheme"
                android:text="tudzts"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                style="@style/fixedTextViewTheme"
                android:text="@string/wind"/>
            <TextView
                android:id="@+id/windTextView"
                style="@style/dataTextViewTheme"
                android:text="tudzts"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                style="@style/fixedTextViewTheme"
                android:text="@string/rain"/>
            <TextView
                android:id="@+id/rainTextView"
                style="@style/dataTextViewTheme"
                android:text="tudzts"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                style="@style/fixedTextViewTheme"
                android:text="@string/hum"/>
            <TextView
                android:id="@+id/humidityTextView"
                style="@style/dataTextViewTheme"
                android:text="tudzts" />
        </TableRow>
        </TableLayout>
    </ScrollView>
    </TableLayout>

=======
>>>>>>> .merge_file_a02676
=======
>>>>>>> origin/dobi_branch
</LinearLayout>